--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
             <img id="aos_stats" src="./assets/aos_stats_min.svg">
       </div>
 
-      <div>
+      <div class="d-print-none">
             <nav class="navbar navbar-expand-md navbar-light bg-light">
                   <div class="container">
                         <a class="navbar-brand" href="index.html">PrettyScribe</a>
-                        <button class="navbar-toggler d-print-none" type="button" data-bs-toggle="collapse"
+                        <button class="navbar-toggler " type="button" data-bs-toggle="collapse"
                               data-bs-target="#collapsibleNavbarAbout" aria-controls="navbarNav" aria-expanded="false"
                               aria-label="Toggle navigation">
                               <span class="navbar-toggler-icon"></span>
                         </button>
-                        <div class="collapse navbar-collapse d-print-none" id="collapsibleNavbarAbout">
+                        <div class="collapse navbar-collapse" id="collapsibleNavbarAbout">
                               <ul class="navbar-nav me-auto">
                                     <li class="nav-item">
                                           <a class="nav-link" href="help.html">Help</a>
@@ -60,7 +60,7 @@
                   </div>
             </nav>
 
-            <div class="container d-print-none">
+            <div class="container">
                   <div class="input-group input-file mb-3">
                         <input type="file" class="form-control" files="roster-file" id="roster-file" name="roster-file">
                         <label class="input-group-text" for="roster-file">Select roster file (.ros, .rosz)</label>
