--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <div class="container">
                   <div class="input-group input-file mb-3">
-                        <input type="file" class="form-control" files="roster-file" id="roster-file" name="roster-file">
+                        <input type="file" class="form-control" files="roster-file" id="roster-file" name="roster-file" accept=".ros, .rosz">
                         <label class="input-group-text" for="roster-file">Select roster file (.ros, .rosz)</label>
                   </div>
             </div>
