Minimally functional HH2 support.

--- a/index.html
+++ b/index.html
@@ -541,7 +541,8 @@
             <p>Beast Snagga Boyz (9x)</p>
       </div>
 
-      <div class="container-fluid">
+      <!-- HH2 unit display prototype -->
+      <div class="container-fluid"  style="display:none;">
             <div class="row">
                   <div>
                         Legion Sicaran Squadron
