deploy: cf2058cd22052c4edb629205cfca721610f84edd

--- a/index.html
+++ b/index.html
@@ -541,6 +541,80 @@
             <p>Beast Snagga Boyz (9x)</p>
       </div>
 
+      <!-- HH2 unit display prototype -->
+      <div class="container-fluid"  style="display:none;">
+            <div class="row">
+                  <div>
+                        Legion Sicaran Squadron
+                  </div>
+                  <div>
+                        <p>Points: 190</p>
+                  </div>
+            </div>
+            <hr>
+            <table class="table table-striped tabel-sm">
+                  <thead>
+                        <tr>
+                              <th>Model</th>
+                              <th>M</th>
+                              <th>BS</th>
+                              <th>Front</th>
+                              <th>Side</th>
+                              <th>Rear</th>
+                              <th>HP</th>
+                              <th>Capacity</th>
+                        </tr>
+                  </thead>
+                  <tbody>
+                        <tr>
+                              <td>Legion Sicaran</td>
+                              <td>16"</td>
+                              <td>4</td>
+                              <td>13</td>
+                              <td>12</td>
+                              <td>12</td>
+                              <td>4</td>
+                              <td>-</td>
+                        </tr>
+                  </tbody>
+            </table>
+            <table class="table table-striped tabel-sm">
+                  <thead>
+                        <tr>
+                              <th>Weapons</th>
+                              <th>Range</th>
+                              <th>Str</th>
+                              <th>AP</th>
+                              <th>Type</th>
+                       </tr>
+                  </thead>
+                  <tbody>
+                        <tr>
+                              <td>Accelerator autocannon</td>
+                              <td>48"</td>
+                              <td>7</td>
+                              <td>4</td>
+                              <td>Heavy 8, Rending (6+), Exoshock (6+)</td>
+                        </tr>
+                        <tr>
+                              <td>Volkite culverin</td>
+                              <td>45"</td>
+                              <td>6</td>
+                              <td>5</td>
+                              <td>Heavy 5, Deflagrate</td>
+                        </tr>
+                        <tr>
+                              <td>Heavy bolter</td>
+                              <td>36"</td>
+                              <td>5</td>
+                              <td>4</td>
+                              <td>Heavy 4</td>
+                        </tr>
+                  </tbody>
+            </table>
+
+      </div>
+
       <!-- Error dialog -->
       <div class="modal fade" id="errorDialog">
             <div class="modal-dialog">
