Fixed bug in MESBG equipment list, other tweaks.
Bows and shields now show up correctly
Force Leader is maked in unit summaries
Switched to CSS grid for columns in data cards
Made things 28.4% prettier.

--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
 
     <p>
         Currently PrettyScribe supports roster files for Warhammer 40k, Warhammer 40k Kill Team, Warhammer Age of
-        Sigmar Warhammer Age of Sigmar Warcry and Horus Heresy - Warhammer 30k.
+        Sigmar Warhammer Age of Sigmar Warcry, Middle Earth Strategy Battle Game, and Horus Heresy - Warhammer 30k.
         Compressed (.rosz) and uncompressed (.ros) roster formats are accepted.
     </p>
 
