--- a/help.html
+++ b/help.html
@@ -65,6 +65,7 @@
                     <li>Horus Heresy - Warhammer 30k</li>
                     <li>Warhammer Age of Sigmar</li>
                     <li>Warhammer Age of Sigmar Warcry</li>
+                    <li>Middle Earth Strategy Battle Game</li>
                     <li>Horus Heresy - Age of Darkness (2nd Edition) (incomplete and in development)</li>
                 </ul>
             </p>
