Add 40k rosterizer support to the UI, fix bugs
- Pipe rosterizer registry parsing into the UI
- Update file parsing to decode UTF8 when not zipped, fixing #14
- Add registry info and rules

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
             <div class="container">
                   <div class="input-group input-file mb-3">
-                        <input type="file" class="form-control" files="roster-file" id="roster-file" name="roster-file" accept=".ros, .rosz">
-                        <label class="input-group-text" for="roster-file">Select roster file (.ros, .rosz)</label>
+                        <input type="file" class="form-control" files="roster-file" id="roster-file" name="roster-file" accept=".ros, .rosz, .regiztry, .registry">
+                        <label class="input-group-text" for="roster-file">Select roster file (.ros, .rosz, .regiztry, .registry)</label>
                   </div>
             </div>
 
