Fix up AoS4 display. Update help and about pages.

--- a/about.html
+++ b/about.html
@@ -36,6 +36,8 @@
         </div>
     </nav>
 
+    <div class="container mt-4">
+
     <h4>About</h4>
 
     <p>
@@ -75,6 +77,9 @@
         Credit also goes to the volunteer teams of BattleScribe catalog maintainers.   These teams
         provide an invaluable service to the tabletop wargamming community.
     </p>
+
+    </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
