--- a/help.html
+++ b/help.html
@@ -36,6 +36,8 @@
         </div>
     </nav>
 
+    <div class="container mt-4">
+
     <div class="row">
         <div class="col-md-12">
             <h4>Usage</h4>
@@ -60,13 +62,13 @@
                 converts them to an easier to read layout suitable for printing or viewing on your device.
                 PrettyScribe supports the rosters for these game systems:
                 <ul>
-                    <li>Warhammer 40k (8th/9th Editions)</li>
+                    <li>Warhammer 40k (8th/9th/10th Editions)</li>
                     <li>Warhammer 40k Kill Team</li>
                     <li>Horus Heresy - Warhammer 30k</li>
-                    <li>Warhammer Age of Sigmar</li>
+                    <li>Warhammer Age of Sigmar (2nd/3rd/4th Editions)</li>
                     <li>Warhammer Age of Sigmar Warcry</li>
                     <li>Middle Earth Strategy Battle Game</li>
-                    <li>Horus Heresy - Age of Darkness (2nd Edition) (incomplete and in development)</li>
+                    <li>Horus Heresy - Age of Darkness (2nd/3rd Editions)</li>
                 </ul>
             </p>
         </div>
@@ -84,6 +86,8 @@
                 that exhibits the problem and with a brief description of the issue you are having.
             </p>
         </div>
+    </div>
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
