--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
             <img id="role_lw" src="./assets/icon_LW.png">
             <img id="role_tr" src="./assets/icon_TR.png">
             <img id="aos_stats" src="./assets/aos_stats_min.svg">
+            <img id="aos_stats_4" src="./assets/aos_stats_4.svg">
+            <img id="aos_spell_4" src="./assets/aos_spell_4.svg">
       </div>
 
       <div class="d-print-none">
